# twitch-game

./: rustfmt.toml
art/: Cargo.toml
components/: Cargo.toml
components/src/: camera.rs  lib.rs  render_data.rs  transform.rs
core/: Cargo.toml
core/src/: event_clump.rs  game.rs  handle_events.rs  lib.rs
event_core/: Cargo.toml
event_core/src/: lib.rs
events/: Cargo.toml
events/src/: lib.rs  main_x_render.rs  render.rs
graphics/: Cargo.toml
graphics/src/: lib.rs  pipeline.rs  texture.rs  tg_glutin.rs
systems/: Cargo.toml
systems/src/: control.rs  lib.rs  render.rs
twitch_game/: Cargo.toml
utils/: Cargo.toml
utils/src/: fps_counter.rs  lib.rs  ortho_helper.rs
