[package]
name = "core"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
time = "0.1.36"
log = "0.3.6"
gfx = "0.13.0"
glutin = "0.7.2"
specs = "0.7.0"

art = { path="../art" }
components = { path="../components" }
event_core = { path="../event_core" }
events = { path="../events" }
graphics = { path="../graphics" }
systems = { path="../systems" }
utils = { path="../utils" }
